add delete item function

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </script>
 
     <script id="main_list_template" type="text/x-handlebars">
-        <a data-title="{{title}}" data-id ="{{id}}" data-day="{{day}}" data-month="{{month}}" data-year="{{year}}" data-description="{{description}}" data-date="{{date}}" class="{{class}}" href="#">{{title}}</a><img src='assets/trash.png'></img>
+        <a href="#">{{title}}</a><img src='assets/trash.png' class="delete"></img>
     </script>
 
     <script src="javascript/app.js"></script>
