--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
     <script id="main_list_template" type="text/x-handlebars">
         <a href="#">{{title}}</a><img src='assets/trash.png' class="delete"></img>
     </script>
-
+    <script src="javascript/model/todo.js"></script>
+    <script src="javascript/collection/todolist.js"></script>
+    <script src="javascript/view/TodoView.js"></script>
+    <script src="javascript/view/appView.js"></script>
     <script src="javascript/app.js"></script>
   </body>
 
