--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </script>
 
     <script id="main_list_template" type="text/x-handlebars">
-        <a href="#">{{title}}</a><img src='assets/trash.png' class="delete"></img>
+        <a href="#" class="{{class}}">{{title}}</a><img src='assets/trash.png' class="delete"></img>
     </script>
     <script src="javascript/model/todo.js"></script>
     <script src="javascript/collection/todolist.js"></script>
