--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     </div>
 
     <script id="nav_list_template" type="text/x-handlebars">
-      <li><a href="#">{{date}}</a><span>{{quantity}}</span></li>
+      {{#each this}}
+        <li><a href="#">{{date}}</a><span>{{quantity}}</span></li>
+      {{/each}}
     </script>
 
     <script id="main_date_template" type="text/x-handlebars">
